--- a/static/extra-credit/extra-credit-02.html
+++ b/static/extra-credit/extra-credit-02.html
@@ -414,31 +414,16 @@ summary {
 </div>
 <div id="task" class="section level2">
 <h2>Task</h2>
-<div id="step-1" class="section level3">
-<h3>Step 1</h3>
-<p>Complete Lab 02 exercises during the workshop.</p>
-</div>
-<div id="step-2" class="section level3">
-<h3>Step 2</h3>
-<p>Export your final visualisation and paste it into this Google Doc <a href="https://docs.google.com/document/d/1o3z0VS2ODkymJuwcCMcv1OrDuI188yfu1NcExtRM-AA/edit?usp=sharing">on this Google Doc</a>. Make sure to enter under University of Edinburgh.</p>
-<p><strong>Due Date:</strong> Add your questions to the Google Doc by Friday, 9 October, 19:00 UK time.</p>
-</div>
-<div id="step-3" class="section level3">
-<h3>Step 3</h3>
-<p><strong>Update your Zoom profile</strong> to include <code>[UoE]</code> in the front of your name. To do so you will need to log on to Zoom <strong>prior to</strong> the meeting and update your profile. This will help us make sure we have participants from both schools in each room.</p>
-</div>
-<div id="step-4" class="section level3">
-<h3>Step 4</h3>
-<p><strong>Join the Zoom call</strong> with University of Edinburgh and University of Florida students on Friday, 9 October, 19:00 UK time.</p>
-<p>Link will be sent out via a Learn announcement.</p>
-</div>
-<div id="step-4-1" class="section level3">
-<h3>Step 4</h3>
-<p>Fill out the following form.</p>
+<ol style="list-style-type: decimal">
+<li><p>Step 1: Complete Lab 02 exercises during the workshop.</p></li>
+<li><p>Step 2: Export your final visualisation and paste it into this Google Doc <a href="https://docs.google.com/document/d/1o3z0VS2ODkymJuwcCMcv1OrDuI188yfu1NcExtRM-AA/edit?usp=sharing">on this Google Doc</a>. Make sure to enter under University of Edinburgh. Do this before the call on Friday.</p></li>
+<li><p>Step 3: Update your Zoom profile to include <code>[UoE]</code> in the front of your name. To do so you will need to log on to Zoom <strong>prior to</strong> the meeting and update your profile. This will help us make sure we have participants from both schools in each room.</p></li>
+<li><p>Step 4: Join the Zoom call with University of Edinburgh and University of Florida students on Friday, 9 October, 19:00 UK time. Link will be sent out via a Learn announcement.</p></li>
+<li><p>Step 5: Fill out the following form.</p></li>
+</ol>
 <p><strong>Due Date:</strong> Submit your answers by Sunday, 11 October, 17:00 UK time.</p>
 <iframe width="900px" height="1500px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=sAafLmkWiUWHiRCgaTTcYRiRHjHRDWhOuLE_6JyNA0dUMzc4Rk5RNFlGN0NXU0UxRDY0T01IRENWMy4u&amp;embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen>
 </iframe>
-</div>
 </div>
 
 
